--- a/src/index.scss
+++ b/src/index.scss
@@ -5,6 +5,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: #E7F6FF;
 }
+*{
+  font-family: 'inter' , system-ui;
+}
 .wrapper{
   background: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.04);
@@ -37,6 +40,17 @@ header{
   h1{
     margin: 0;
   }
+  .search__block{
+    border:1px solid #f3f3f3;
+    border-radius: 10px;
+    padding: 0 15px;
+    input{
+      border: 0;
+      padding: 13px;
+      font-size: 16px;
+      width: 200px;
+    }
+  }
   .sneakers{
     display: flex;
   }
@@ -47,6 +61,18 @@ header{
     background: #FFFFFF;
     border: 1px solid #F3F3F3;
     border-radius: 40px;
+    transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+    &:hover{
+      box-shadow: 0px 20px 35px rgba(0, 0, 0, 0.08);
+      transform: translateY(-5px);
+    }
+    .favorite{
+      position: absolute;
+      cursor: pointer;
+      width: 32px;
+      height: 32px;
+    }
+
     .price{
       p{
         text-transform: uppercase;
@@ -62,10 +88,7 @@ header{
         color: #000000;
       }
     }
-    img{
-      width: 133px;
-      height: 112px;
-    }
+
     p,b{
       margin: 0;
     }
@@ -86,5 +109,32 @@ header{
         height: 15px;
       }
     }
+  }
+}
+.overlay{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color:rgba(0,0,0,0.5) ;
+  z-index: 1;
+}
+.drawer{
+  position: absolute;
+  width: 385px;
+  right: 0;
+  height: 100%;
+  background: #FFFFFF;
+  box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
+  padding: 30px;
+  h2{
+    margin: 0;
+    font-size: 24px;
+  }
+  .cart__item{
+    border: 1px solid #F3F3F3;
+    border-radius: 20px;
+    padding: 30px 20px;
   }
 }
