--- a/src/index.scss
+++ b/src/index.scss
@@ -122,12 +122,20 @@ header{
 }
 .drawer{
   position: absolute;
-  width: 385px;
+  display: flex;
+  flex-direction: column;
+  width: 420px;
   right: 0;
   height: 100%;
   background: #FFFFFF;
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
   padding: 30px;
+
+  .items{
+    flex: 1;
+    overflow: auto;
+    margin-bottom: 40px;
+  }
   h2{
     margin: 0;
     font-size: 24px;
@@ -136,5 +144,69 @@ header{
     border: 1px solid #F3F3F3;
     border-radius: 20px;
     padding: 30px 20px;
+    overflow: hidden;
+    span{
+      font-size: 16px;
+    }
+    b{
+      font-size: 14px;
+    }
+    .cartremove{
+      opacity: 0.5;
+      transition: 0.2s ease-in-out;
+      cursor: pointer;
+      &:hover{
+        opacity: 2;
+      }
+    }
+  }
+ .cardTotalBlock{
+   .border__bottom{
+     position: relative;
+     top: -4px;
+     width: 155px;
+     height: 20px;
+     border-bottom: 1px dashed #DFDFDF;
+   }
+   ul{
+     margin-bottom: 30px!important;
+   }
+   li{
+     margin-bottom: 20px;
+   }
+  .greenbutton{
+    position: relative;
+    &:hover{
+      img{
+        transform: translateX(5px);
+      }
+    }
+    img{
+      position: absolute;
+      right: 33px;
+      top: 21px;
+      transition: transform 0.2s ease-in-out;
+    }
+  }
+ }
+}
+.greenbutton{
+  width: 100%;
+  height: 55px;
+  background: #9DD558;
+  border-radius: 18px;
+  border: none;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 19px;
+  text-align: center;
+  color: #FFFFFF;
+  cursor: pointer;
+  transition: background 0.1s ease-in-out;
+  &:hover{
+    background: lighten(#9DD558,3%);
+  }
+  &:active{
+    background: darken(#9DD558,10%);
   }
 }
